# subset_sum

./: .gitignore  .mcp.json  Cargo.toml  index.md  key.txt  num_set.txt  pyproject.toml  readme.md  targets.txt  test_keys.csv  test_targets.csv
.agents/skills/dpss-reconcile/: SKILL.md
.github/workflows/: devskim.yml  python-app.yml  rust.yml
benches/: benchmark.ipynb  my_benchmark.rs  py_benchmark.ipynb  py_benchmark_complicated.ipynb
docs/: _config.yml  bundle.js  find_subset.html  index.html  index.md
docs/find_subset/: index.html
docs/pkg/: README.md  dpss.d.ts  dpss.js  dpss_bg.wasm  dpss_bg.wasm.d.ts  package.json
docs/reconcile/: index.html
examples/llm_reconcile_demo/: bank_norm.json  bank_rows.json  generate_data.py  ledger_norm.json  ledger_rows.json
examples/llm_reconcile_demo_small/: README.md  bank_norm.json  bank_rows.json  ledger_norm.json  ledger_rows.json
node/: webpack.config.js
node/nodesrc/: App.jsx  style.css
python/: bank_reconciliation.ipynb  example.ipynb  large_reconcile_test.py  llm_mcp_reconcile_demo.py  python_subset_sum.ipynb  test_py_module.py  test_reconciliation.py
python_mcp/: README.md  normalize.py  schemas.py  server.py  test_normalize.py  test_schemas.py  test_server.py  test_server_tools.py
scripts/: build_linux.sh  build_windows.ps1  readme.md
src/: dp_module.rs  lib.rs  main.rs  py_module.rs  reconciliation.rs
