[package]
name = "subset_sum"
version = "0.4.3"
edition = "2018"
authors = ["Tomohiro Endo <europeanplaice@gmail.com>"]
description = "Solves subset sum problem and return a set of decomposed integers." 
repository = "https://github.com/europeanplaice/subset_sum"
readme = "readme.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
categories = ["algorithms"]
keywords = ["dynamic_programming", "subset_sum", "accounting"]

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false