[package]
name = "subset_sum"
version = "0.10.5"
edition = "2018"
authors = ["Tomohiro Endo <europeanplaice@gmail.com>"]
description = "Solves subset sum problem and returns a set of decomposed integers. It also can match corresponding numbers from two vectors and be used for Account reconciliation." 
repository = "https://github.com/europeanplaice/subset_sum"
readme = "readme.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
categories = ["algorithms"]
keywords = ["dynamic_programming", "subset_sum", "accounting"]

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = "0.3"

[lib]
name = "dpss"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[[bench]]
name = "my_benchmark"
harness = false