[package]
name = "subset_sum"
version = "0.23.1"
edition = "2018"
authors = ["Tomohiro Endo <europeanplaice@gmail.com>"]
description = "Solves subset sum problem and returns a set of decomposed integers. It also can match corresponding numbers from two vectors and be used for Account reconciliation." 
repository = "https://github.com/europeanplaice/subset_sum"
readme = "readme.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
categories = ["algorithms"]
keywords = ["dynamic_programming", "subset_sum", "accounting"]

[dependencies]
pyo3 = {version = "0.27.1", features = ["abi3-py38", "extension-module"], optional = true}
itertools = {version = "0.14.0"}
rayon = {version = "1.11"}
wasm-bindgen = {version = "0.2.79", optional = true}
field_accessor = "0.5"
bitvec = "1"
dashmap = "5.5.3"

[features]
wasm = ["wasm-bindgen"]
python = ["pyo3"]

[lib]
name = "dpss"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
